--- a/src/app/justin/chat-input/chat-input.component.css
+++ b/src/app/justin/chat-input/chat-input.component.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 1632px;
+    width: 100%;
     height: 48px;
     max-height: 280px;
     padding: 11px;
