--- a/src/app/justin/dock/dock.component.css
+++ b/src/app/justin/dock/dock.component.css
@@ -2,8 +2,8 @@
     display: inline-flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 16px;
+    /* padding: 16px; */
     background: #f3f3f3;
-    width: 240px;
+    height: 100%;
     /* box-shadow:  0 2px 4px -1px hsla(214, 53%, 23%, 0.16), 0 3px 12px -1px hsla(214, 50%, 22%, 0.26); */
 }
